--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.19.4",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.10",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
