--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.10",
+    "resend": "^6.5.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
