ref brevosmtp to mailersend

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -9,8 +9,9 @@ CLOUD_API_SECRET=
 
 GOOGLE_GENAI_API_KEY=
 
-EMAIL_USER=
-EMAIL_PASS=
+MAILERSEND_SMTP_USER=
+MAILERSEND_SMTP_PASS=
+MAILERSEND_FROM=
 
 RESET_TOKEN_EXPIRES_MIN=
 
