ref: update readme and env example

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -9,9 +9,8 @@ CLOUD_API_SECRET=
 
 GOOGLE_GENAI_API_KEY=
 
-MAILERSEND_SMTP_USER=
-MAILERSEND_SMTP_PASS=
-MAILERSEND_FROM=
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
 
 RESET_TOKEN_EXPIRES_MIN=
 
